src/opt/tests/snapshots/sroa__bail_bad_props1.snap
---
created: "2019-04-29T03:59:06.427300500Z"
creator: insta@0.7.4
source: src/opt/tests/sroa.rs
expression: "\n    let something = { __proto__: 1, x: 2 };\n    g1 = something.x;\n    something.x = g2;\n"
---
_key = "__proto__"
_val = 1
_key$1 = "x"
_val$1 = 2
something = { [_key]: _val, [_key$1]: _val$1 }
_prp = "x"
_val$2 = something[_prp]
<global g1> <- _val$2
_prp$1 = "x"
_val$3 = <global g2>
something[_prp$1] <- _val$3
