src/opt/tests/snapshots/sroa__bail_bad_props3.snap
---
created: "2019-04-29T03:59:06.433300Z"
creator: insta@0.7.4
source: src/opt/tests/sroa.rs
expression: "\n    let something = { x: 2 };\n    g1 = something.x;\n    something.constructor = g2;\n"
---
_key = "x"
_val = 2
something = { [_key]: _val }
_prp = "x"
_val$1 = something[_prp]
<global g1> <- _val$1
_prp$1 = "constructor"
_val$2 = <global g2>
something[_prp$1] <- _val$2
