src/opt/tests/snapshots/sroa__basic.snap
---
created: "2019-04-29T04:47:06.090900800Z"
creator: insta@0.7.4
source: src/opt/tests/sroa.rs
expression: "\n    let something = { x: 1 };\n    foo();\n    g1 = something.x;\n    something.x = g2;\n"
---
<dead> = "x"
_val = 1
<dead> = <void>
x <= _val
_fun = <global foo>
<dead> = _fun()
<dead> = "x"
_val$1 = *x
<global g1> <- _val$1
<dead> = "x"
_val$2 = <global g2>
x <- _val$2
