src/opt/tests/snapshots/sroa__call_receiver.snap
---
created: "2019-04-29T04:47:06.092901300Z"
creator: insta@0.7.4
source: src/opt/tests/sroa.rs
expression: "\n    let something = { x: function() {} };\n    something.x(); // receives `this`: do not opt\n    let something2 = { x: function() {} };\n    (0, something2.x)(); // does not receive `this`: opt\n"
---
_key = "x"
_val = <function>:
    <empty>
_obj = { [_key]: _val }
_prp = "x"
<dead> = _obj[_prp]()
<dead> = "x"
_val$1 = <function>:
    <empty>
<dead> = <void>
x <= _val$1
<dead> = "x"
_fun = *x
<dead> = _fun()
