src/opt/tests/snapshots/sroa__invalid_unknown_prop.snap
---
created: "2019-04-27T22:01:40.082870100Z"
creator: insta@0.7.4
source: src/opt/tests/sroa.rs
expression: "\n    let something = { x: 1 };\n    foo();\n    something.prototype;\n    g = something.x;\n"
---
_key = "x"
_val = 1
something = { [_key]: _val }
_fun = <global foo>
<dead> = _fun()
_prp = "prototype"
<dead> = something[_prp]
_prp$1 = "x"
_val$1 = something[_prp$1]
<global g> <- _val$1
