src/opt/tests/snapshots/sroa__invalidate_escape.snap
---
created: "2019-04-27T22:01:40.138878900Z"
creator: insta@0.7.4
source: src/opt/tests/sroa.rs
expression: "\n    let something = { x: 1 };\n    if (foo) {\n        g = something;\n    }\n    g1 = something.x;\n"
---
_key = "x"
_val = 1
something = { [_key]: _val }
_iff = <global foo>
<if> _iff:
    <global g> <- something
<else>:
    <empty>
_prp = "x"
_val$1 = something[_prp]
<global g1> <- _val$1
