src/opt/tests/snapshots/sroa__invalidate_escape_to_other_object.snap
---
created: "2019-04-27T22:01:40.165869Z"
creator: insta@0.7.4
source: src/opt/tests/sroa.rs
expression: "\n    let something = { x: 1 };\n    if (foo) {\n        g = { foo: something };\n    }\n    g1 = something.x;\n"
---
_key = "x"
_val = 1
something = { [_key]: _val }
_iff = <global foo>
<if> _iff:
    _key$1 = "foo"
    _val$2 = { [_key$1]: something }
    <global g> <- _val$2
<else>:
    <empty>
_prp = "x"
_val$1 = something[_prp]
<global g1> <- _val$1
