src/opt/tests/snapshots/sroa__switch_local.snap
---
created: "2019-04-29T04:47:06.101899Z"
creator: insta@0.7.4
source: src/opt/tests/sroa.rs
expression: "\n    let a = { inner: 0, outer: 1 };\n    switch (x) {\n        case 1:\n            a.inner = 2;\n            a.inner;\n        case 2:\n            a.inner;\n    }\n    a.outer;\n"
---
<dead> = "inner"
_val = 0
<dead> = "outer"
_val$1 = 1
<dead> = <void>
inner <= _val
outer <= _val$1
_swi = <global x>
_tst = 1
_tst$1 = 2
<switch> _swi:
    <case> _tst:
    <dead> = "inner"
    _val$2 = 2
    inner <- _val$2
    <dead> = "inner"
    <dead> = *inner
    <case> _tst$1:
    <dead> = "inner"
    <dead> = *inner
<dead> = "outer"
<dead> = *outer
